tests/expectations/compiler/dyn_record/dyn_record_wrong_owner_type_fail.out
Error [ETYC0372117]: Expected type `u64` but type `address` was found.
    --> compiler-test:3:22
     |
   3 |         let x: u64 = r.owner;
     |                      ^^^^^^^
